--- a/2-2/style.css
+++ b/2-2/style.css
@@ -1,1 +1,47 @@
 /* ここに記載 */
+.sample-grid{
+    display:grid;
+    grid-template-areas:
+    "header header"
+    "side main"
+    "footer footer";
+    grid-template-columns: 200px 1fr;
+    grid-template-rows:auto 1fr auto;
+    gap:1rem; 
+    height:100vh;   
+}
+
+header{
+    grid-area:header;
+    background-color:rgb(90, 90, 245);
+    padding:0.5rem 0.5rem;
+}
+
+header a{
+    text-decoration:none;
+    color:black;
+}
+
+.side{
+    grid-area:side;
+    background-color:antiquewhite;
+    border:2px solid black;
+}
+
+.side a{
+    text-decoration:none;
+    color:black;
+}
+
+.main{
+    grid-area:main;
+    border:2px solid black;
+    background-color:bisque;
+}
+
+footer{
+    grid-area:footer;
+    background-color:cornflowerblue;
+    text-align:center;
+    padding: 1rem 0;
+}
