--- a/2-3/style.css
+++ b/2-3/style.css
@@ -1,8 +1,21 @@
 /* ここに記載 */
 .cards{
     display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns:repeat(4,1fr);
     gap:1rem;  
+    width:100%;
+}
+
+@media (max-width:1000px){
+    .cards{
+        grid-template-columns:repeat(3,1fr);
+    }
+}
+
+@media (max-width:500px){
+    .cards{
+        grid-template-columns:1fr;
+    }
 }
 
 .card{
